Fixed css page alignment.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,7 +10,7 @@ a:visited {text-decoration:none;}
 a:hover {text-decoration:underline;}
 a:active {text-decoration:underline;}
 
-.container {
+#container {
     width: 980px;
     margin-left: auto;
     margin-right: auto;
@@ -23,11 +23,12 @@ a:active {text-decoration:underline;}
 }
 
 #logo {
+    width: 40px;
     float: left;
 }
 
 #nav {
-    width: 680px;
+    width: 640px;
     height: 20px;
     float: left;
     margin-left: auto;
@@ -80,7 +81,7 @@ a:active {text-decoration:underline;}
 }
 
 #controls {
-    width: 200px;
+    width: 280px;
     padding-top: 10px;
     float: left;
     text-align: right;
